<!--
  ~ This file is part of FlowDrop Android.
  ~
  ~ For license and copyright information please follow this link:
  ~ https://github.com/noseam-env/flowdrop-android/blob/master/LEGAL
  -->

<resources>
    <string name="app_name" translatable="false">FlowDrop</string>
    <string name="quick_toggle" translatable="false">FlowDrop</string>
    <string name="flowdrop_logo_description">FlowDrop Logo</string>
    <string name="waiting_for_the_files_to_be_sent">Waiting for the files to be sent</string>
    <string name="share_button">Share</string>
    <string name="select_receivers">Select receivers</string>
    <string name="donate">Donate</string>
    <string name="open_settings">Open Settings</string>
    <string name="make_sure_local_network">Make sure that the devices you want to send files to are on your local network.</string>
    <string name="send_to_selected_devices">Send to selected devices</string>
    <string name="send_button">Send</string>
    <string name="receive_in_background">Receive in background</string>
    <string name="settings">Settings</string>
    <string name="receiving_in_background_warn">Receiving in background requires \"Unrestricted\" battery mode</string>
    <string name="flowdrop_android_credit">FlowDrop Android {version}\nThis software licensed under GNU GPL version 3 with anti-commercial clause.\nSource code available on GitHub.</string>
    <string name="open_battery_dialog">Disable Battery Optimization</string>
    <string name="skip">Skip</string>
    <string name="current_battery_optimization_mode">Current battery optimization mode:</string>
    <string name="bad_mode_for_background">In the \"Restricted\" battery mode, you will not be able to accept files in the background</string>
    <string name="restricted">RESTRICTED</string>

    <!-- Foreground Notification -->
    <string name="notification_channel_service_foreground_title">Background Service</string>
    <string name="notification_channel_service_foreground_subtitle">Notifications shown when FlowDrop is running</string>
    <string name="notification_service_foreground_title">FlowDrop</string>
    <string name="notification_service_foreground_subtitle">Running in the background, tap to hide</string>

    <!-- Accept Notification -->
    <string name="notification_channel_ask_title">Ask for send</string>
    <string name="notification_channel_ask_subtitle">Notifications shown when someone is want to sent you files</string>
    <string name="notification_ask_title">Someone is asking you for receive file(s)</string>
    <string name="notification_ask_subtitle">Will be cancelled automatically in 30 seconds</string>
</resources>