<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of FlowDrop Android.
  ~
  ~ For license and copyright information please follow this link:
  ~ https://github.com/noseam-env/flowdrop-android/blob/master/LEGAL
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/oneui_bg1"
    tools:context=".ui.InstructionsActivity">

    <Button
        android:id="@+id/skipBtn"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@+id/openDialogBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_battery_optimization_mode"
            android:textSize="18sp"
            android:textColor="@color/oneui_text1"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restricted"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="2dp"
            android:background="@drawable/battery_mode_background"
            android:backgroundTint="#D0312D"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bad_mode_for_background"
            android:textSize="16sp"
            android:textColor="@color/oneui_text3"
            android:textAlignment="center"
            android:layout_marginTop="16dp" />

    </LinearLayout>

    <Button
        android:id="@+id/openDialogBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/open_battery_dialog"
        android:scaleX="1.25"
        android:scaleY="1.25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>